--- a/src/styles/configs/_variables.scss
+++ b/src/styles/configs/_variables.scss
@@ -1,5 +1,11 @@
 $black: #000000;
 $white: #ffffff;
+$grey-scale1: #222222;
+$grey-scale2: #313131;
+$grey-scale3: #404040;
+$grey-scale4: #9c9c9c;
+$grey-scale5: #ececec;
+$grey-scale6: #f5f5f5;
 $main-purple: #ab33d4;
 $main-dark-blue: #100b36;
 $main-blue: #1580c8;
