style: improve layout style

--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -72,6 +72,9 @@
   }
 }
 .mobile-menu {
+  .logo {
+    cursor: pointer;
+  }
   .mobile-menu-stack {
     margin-bottom: 20px;
     .mobile-menu-nav {
