--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,4 +6,5 @@
 @import "./components/pageSpinner";
 @import "./components/user-tray";
 @import "./pages/home";
+@import "./pages/details-page";
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
