--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -31,8 +31,16 @@
       position: relative;
       margin-left: 10px;
     }
+    .noti-button {
+      margin-left: 20px;
+      font-size: 20px;
+      cursor: pointer;
+    }
     .user {
+      aspect-ratio: 1/1;
+      object-fit: cover;
       height: 40px;
+      width: auto;
       border-radius: 100%;
       margin: 0 20px;
       justify-self: end;
@@ -41,6 +49,7 @@
       margin-left: -10px;
       margin-right: 20px;
       font-size: 20px;
+      cursor: pointer;
       @include from(md) {
         display: none;
       }
