--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -30,6 +30,7 @@
       width: 100%;
       position: relative;
       margin-left: 10px;
+      text-overflow: ellipsis;
     }
     .noti-button {
       margin-left: 20px;
