--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,4 @@
 @import "./components/user-tray";
 @import "./pages/home";
 @import "./pages/details-page";
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+@import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
