--- a/src/styles/configs/_variables.scss
+++ b/src/styles/configs/_variables.scss
@@ -1,17 +1,13 @@
 $black: #000000;
 $white: #ffffff;
-$grey-scale1: #222222;
-$grey-scale2: #313131;
-$grey-scale3: #404040;
-$grey-scale4: #9c9c9c;
-$grey-scale5: #ececec;
-$grey-scale6: #f5f5f5;
-$main-purple: #ab33d4;
-$main-dark-blue: #100b36;
-$main-blue: #1580c8;
-$main-jade: #38d2d6;
-$main-yellow: #f6a609;
-$main-grey: #616262;
-$error-color: #fb4e4e;
-$success-color: #00b271;
-$warning-color: $main-yellow;
+$grey1: #222222;
+$grey2: #313131;
+$grey3: #404040;
+$grey4: #9c9c9c;
+$grey5: #ececec;
+$grey6: #f5f5f5;
+$purple1: #cd28e8;
+$purple2: #3f2b84;
+$dark-purple: #000031;
+$cyan: #0bebd6;
+$light-cyan: #b1fff8;
