--- a/src/styles/components/_user-tray.scss
+++ b/src/styles/components/_user-tray.scss
@@ -21,7 +21,7 @@
       font-size: 15px;
       line-height: 20px;
       font-weight: 500;
-      color: $main-jade;
+      color: $cyan;
     }
     .user-loyalty img {
       height: 30px;
