--- a/src/styles/configs/_mixin.scss
+++ b/src/styles/configs/_mixin.scss
@@ -11,6 +11,14 @@ $container-width: 1440px;
   margin-left: auto;
   margin-right: auto;
 }
+@mixin blur-overlay {
+  background: linear-gradient(
+    126.08deg,
+    rgba(255, 255, 255, 0.3) 13.84%,
+    rgba(255, 255, 255, 0.2) 74.14%
+  );
+  backdrop-filter: blur(40px);
+}
 
 @mixin xs {
   @media (max-width: #{$xs - 1px}) {
