--- a/src/styles/configs/_variables.scss
+++ b/src/styles/configs/_variables.scss
@@ -8,6 +8,7 @@ $grey5: #ececec;
 $grey6: #f5f5f5;
 $purple1: #cd28e8;
 $purple2: #3f2b84;
-$dark-purple: #000031;
+$purple3: #ff00c7;
+$dark-purple: #030348;
 $cyan: #0bebd6;
 $light-cyan: #b1fff8;
