--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import "./configs/mixin";
 @import "./configs/variables";
 @import "./configs/animation";
+@import "./configs/chakra-custom";
 @import "./components/app-layout";
 @import "./components/app-empty";
 @import "./components/pageSpinner";
@@ -8,3 +9,10 @@
 @import "./pages/home";
 @import "./pages/details-page";
 @import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
+@font-face {
+  font-family: SVN-Transformer;
+  src: url(/fonts/SVN-Transformer.ttf);
+}
+html {
+  scroll-behavior: smooth !important;
+}
