--- a/src/styles/configs/_mixin.scss
+++ b/src/styles/configs/_mixin.scss
@@ -8,16 +8,7 @@ $container-width: 1440px;
 
 @mixin container {
   max-width: $container-width;
-  margin-left: auto;
-  margin-right: auto;
-}
-@mixin blur-overlay {
-  background: linear-gradient(
-    126.08deg,
-    rgba(255, 255, 255, 0.3) 13.84%,
-    rgba(255, 255, 255, 0.2) 74.14%
-  );
-  backdrop-filter: blur(40px);
+  width: 100%;
 }
 
 @mixin xs {
