--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,3 +1,324 @@
 .home-page {
-  background: transparent;
+  @include container;
+  .banners {
+    height: 300px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    animation: fadeInLeft 0.5s;
+    .slick-slider {
+      .arrow-button {
+        position: absolute;
+        height: 40px;
+        width: 40px;
+        background: $purple3;
+        border-radius: 100%;
+        z-index: 1;
+        top: calc(50% - 20px);
+        font-size: 30px;
+      }
+      .arrow-prev {
+        left: 20px;
+      }
+      .arrow-next {
+        right: 20px;
+      }
+      .slick-list {
+        .slick-track {
+          transition: 1s;
+          .slick-slide {
+            padding: 10px;
+            transition: 0.5s;
+            .banner {
+              height: 200px;
+              box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.69);
+              border-radius: 4px;
+              overflow: hidden;
+              .banner-image {
+                cursor: pointer;
+                transition: 0.5s;
+                height: 100%;
+                width: 100%;
+                transform: scale(1.1);
+                object-fit: cover;
+                &:hover {
+                  transform: scale(1.2);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .ads {
+    height: 64px;
+    border-radius: 16px;
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+    padding: 2px;
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4);
+    margin-bottom: 100px;
+    transition: 0.5s;
+    animation: fadeInRight 0.5s;
+    &:hover {
+      box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.4);
+    }
+    .ads-body {
+      margin: auto;
+      border-radius: 16px;
+      width: 100%;
+      height: 100%;
+      background: $dark-purple;
+      position: relative;
+      padding-left: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .listing {
+        position: absolute;
+        width: 100px;
+        height: 40px;
+        left: 0;
+        top: calc(50% - 20px);
+        background: $purple1;
+        border-radius: 0 20px 20px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        font-weight: 400;
+      }
+      img {
+        height: 40px;
+      }
+      .ads-content {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 16px;
+        margin-left: 20px;
+        width: 100%;
+        transition: 0.5s;
+        @include to(md) {
+          font-size: 15px;
+        }
+        @include to(sm) {
+          font-size: 10px;
+        }
+      }
+      .cyan-text {
+        color: $cyan;
+      }
+      .time {
+        padding: 20px;
+        width: 20em;
+        text-align: right;
+        text-decoration: underline;
+        @include to(xs) {
+          font-size: 12px;
+        }
+      }
+    }
+  }
+  .home-section {
+    .section-heading {
+      font-size: 72px;
+      font-weight: 700;
+      font-family: SVN-Transformer;
+      transition: 0.5s;
+      @include to(sm) {
+        font-size: 50px;
+      }
+    }
+    .section-nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 40px;
+      .view-all {
+        display: flex;
+        align-items: center;
+        font-size: 24px;
+        font-weight: 700;
+        color: $light-cyan;
+        transition: 0.5s;
+        cursor: pointer;
+        svg {
+          height: 40px;
+          margin-right: 20px;
+          fill: $light-cyan;
+          transition: 0.5s;
+        }
+        &:hover {
+          color: $cyan;
+          text-shadow: 0px 0px 20px #68fff1;
+          svg {
+            fill: $cyan;
+          }
+        }
+        @include to(xs) {
+          font-size: 16px;
+          svg {
+            height: 20px;
+            margin-right: 5px;
+          }
+        }
+      }
+    }
+    .slick-slider {
+      margin: 50px 0;
+      .slick-list {
+        .slick-track {
+          .slick-slide {
+            transition: 0.5s;
+            padding: 10px;
+          }
+        }
+      }
+    }
+    .arrow-btn {
+      position: absolute;
+      top: -95px;
+      font-size: 40px;
+      height: 50px;
+      width: 50px;
+    }
+    .arrow-prev {
+      right: 60px;
+    }
+    .arrow-next {
+      right: 0;
+    }
+  }
+  .launchpad {
+    animation: fadeInLeft 0.5s;
+    .launchpad-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+      backdrop-filter: blur(40px);
+      height: fit-content;
+      width: 100%;
+      border-radius: 16px;
+      box-shadow: 0px 0px 10px #68fff1;
+      cursor: pointer;
+      &:hover {
+        .launchpad-image img {
+          transform: scale(1.1);
+        }
+      }
+      .launchpad-image {
+        border-radius: 16px 16px 0 0;
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+          transition: 0.5s;
+        }
+      }
+      .on-going {
+        padding: 0 10px;
+        background: url(/home/on-going.png);
+        background-size: 100% 100%;
+        font-size: 18px;
+        font-weight: 400;
+        margin: 10px;
+      }
+      .up-coming {
+        padding: 0 10px;
+        background: url(/home/up-coming.png);
+        background-size: 100% 100%;
+        font-size: 18px;
+        font-weight: 400;
+        margin: 10px;
+      }
+      .launchpad-name {
+        font-size: 36px;
+        line-height: 36px;
+        font-weight: 700;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        @include to(xs) {
+          font-size: 25px;
+        }
+      }
+      .launchpad-stats {
+        width: 90%;
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 50px;
+        @include to(sm) {
+          flex-direction: column;
+        }
+        .stat {
+          display: flex;
+          align-items: center;
+          font-size: 16px;
+          span {
+            font-weight: 700;
+            margin-right: 5px;
+          }
+          svg {
+            height: 20px;
+            margin-right: 10px;
+            @include to(xs) {
+              margin-right: 1px;
+            }
+          }
+        }
+      }
+      .start-in {
+        height: 50px;
+        margin: 10px;
+        span {
+          font-size: 18px;
+          font-weight: 300;
+          @include to(xs) {
+            font-size: 16px;
+          }
+        }
+        span:first-child {
+          font-weight: 700;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+  .hot-collections {
+    .collection-item {
+      background: linear-gradient(
+        152.97deg,
+        rgba(255, 255, 255, 0.2) 0%,
+        rgba(255, 255, 255, 0) 100%
+      );
+      border: 1px solid $purple2;
+      border-radius: 16px;
+      display: flex;
+      align-items: center;
+      padding: 25px;
+      height: 150px;
+      margin-bottom: 20px;
+      @include to(md) {
+        height: 100px;
+      }
+      cursor: pointer;
+      img {
+        margin-right: 25px;
+        height: 100%;
+      }
+      span {
+        font-size: 30px;
+        font-weight: 700;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        @include to(xs) {
+          font-size: 16px;
+        }
+      }
+    }
+  }
 }
