update: dividing components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,9 @@
 @import "./components/app-empty";
 @import "./components/pageSpinner";
 @import "./components/user-tray";
+@import "./components/listing";
+@import "./components/launchpad-item";
+@import "./components/collection-item";
 @import "./pages/home";
 @import "./pages/details-page";
 @import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
