feat: create example page and styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,7 +10,9 @@
 @import "./components/launchpad-item";
 @import "./components/collection-item";
 @import "./pages/home";
-@import "./pages/details-page";
+@import "./pages/details";
+@import "./pages/activities";
+@import "./pages/discover";
 @import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
 @font-face {
   font-family: SVN-Transformer;
