--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -39,17 +39,18 @@
       height: 40px;
     }
     .listing-content {
-      font-size: 20px;
-      font-weight: 400;
-      line-height: 16px;
       margin-left: 20px;
       width: 100%;
-      transition: 0.5s;
-      @include to(md) {
-        font-size: 15px;
-      }
-      @include to(sm) {
-        font-size: 10px;
+      height: 100%;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      .marquee-content {
+        white-space: nowrap;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 1em;
+        animation: marquee 5s linear infinite;
       }
     }
     .cyan-text {
