--- a/src/styles/components/_launchpad-item.scss
+++ b/src/styles/components/_launchpad-item.scss
@@ -8,6 +8,7 @@
   width: 100%;
   border-radius: 16px;
   box-shadow: 0px 0px 10px #68fff1;
+  overflow: hidden;
   cursor: pointer;
   &:hover {
     .launchpad-image img {
