--- a/src/styles/configs/_animation.scss
+++ b/src/styles/configs/_animation.scss
@@ -24,6 +24,16 @@
   }
 }
 
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes fadeout {
   from {
     opacity: 1;
