--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,8 @@
 @import "./components/listing";
 @import "./components/launchpad-item";
 @import "./components/collection-item";
+@import "./components/auction-item";
+@import "./components/getting-started-item";
 @import "./pages/home";
 @import "./pages/details";
 @import "./pages/activities";
