--- a/src/styles/components/_app-layout.scss
+++ b/src/styles/components/_app-layout.scss
@@ -1,5 +1,8 @@
 .app-layout {
-  background: $dark-purple;
+  background: url(/common/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   .header {
     background: rgba(40, 38, 54, 0.4);
     display: flex;
@@ -118,6 +121,94 @@
     overflow: hidden;
   }
   .footer {
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(40px);
+    box-shadow: 0 -10px 5px $dark-purple;
+    .footer-body {
+      @include container;
+      margin: 0 25px;
+      padding-top: 50px;
+      padding-bottom: 100px;
+      display: flex;
+      align-items: center;
+      @include to(md) {
+        flex-direction: column;
+      }
+      .footer-logo {
+        height: 100px;
+        object-fit: contain;
+        margin-right: 25px;
+      }
+      .footer-content {
+        height: 100%;
+        width: 100%;
+        .footer-socials {
+          display: grid;
+          grid-template-columns: repeat(6, 1fr);
+          grid-gap: 50px;
+          padding: 30px 50px;
+          width: 100%;
+          @include to(lg) {
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 20px;
+          }
+          @include to(md) {
+            grid-template-columns: repeat(6, 1fr);
+            grid-gap: 20px;
+          }
+          @include to(xs) {
+            grid-gap: 10px;
+          }
+          .footer-social-item {
+            border: 1px solid $purple2;
+            border-radius: 100%;
+            aspect-ratio: 1/1;
+            cursor: pointer;
+            transition: 0.5s;
+            img {
+              width: 100%;
+              object-fit: contain;
+            }
+            &:hover {
+              transform: scale(1.1);
+            }
+            @include lg {
+              width: 50%;
+            }
+          }
+        }
+        .footer-navs {
+          display: flex;
+          width: 100%;
+          justify-content: center;
+          .footer-nav-item {
+            font-size: 24px;
+            font-weight: 700;
+            transition: 0.5s;
+            cursor: pointer;
+            &:not(:last-child) {
+              margin-right: 20px;
+            }
+            &:hover {
+              color: $purple3;
+            }
+            @include lg {
+              font-size: 20px;
+            }
+            @include to(sm) {
+              font-size: 20px;
+            }
+            @include to(xs) {
+              font-size: 13px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .sub-footer {
+    background: $purple2;
     height: 50px;
     display: flex;
     align-items: center;
