--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -6,6 +6,7 @@
   box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4);
   margin-bottom: 100px;
   transition: 0.5s;
+  animation: fadein 1s;
   &:hover {
     box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.4);
   }
