--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -7,12 +7,13 @@
     .slick-slider {
       .arrow-button {
         position: absolute;
-        height: 40px;
-        width: 40px;
-        background: $purple3;
+        height: 60px;
+        width: 60px;
+        background: rgba($purple3, 0.5);
+        @include blurBack(20px);
         border-radius: 100%;
         z-index: 1;
-        top: calc(50% - 20px);
+        top: calc(50% - 30px);
         font-size: 30px;
       }
       .arrow-prev {
@@ -119,8 +120,9 @@
     }
   }
   .banners,
-  .launchpad {
-    animation: fadeUp 1s;
+  .launchpad,
+  .listing {
+    animation: fadein 1s;
   }
   .scrolled {
     animation: fadeUp 1s;
