--- a/src/styles/components/_launchpad-item.scss
+++ b/src/styles/components/_launchpad-item.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
-  backdrop-filter: blur(40px);
+  @include blurBack(40px);
   height: fit-content;
   width: 100%;
   border-radius: 16px;
