--- a/src/styles/pages/_activities.scss
+++ b/src/styles/pages/_activities.scss
@@ -1,3 +1,105 @@
 .activities-page {
   background: transparent;
+  margin-top: 45px;
+  h1 {
+    &.activities {
+      font-size: 72px;
+      font-weight: 700;
+      font-family: SVN-Transformer;
+      transition: 0.5s;
+      text-transform: uppercase;
+      @include to(sm) {
+        font-size: 50px;
+      }
+    }
+  }
+  .sort {
+    display: flex;
+    justify-content: flex-end;
+    .select-sort {
+      box-sizing: border-box;
+      border-radius: 8px;
+      border: 1px solid #D7D7D7;
+      float: right;
+      &.price-sort {
+        margin-right: 8px;
+        .select-button,
+        .select-list {
+          img {
+            width: 20px;
+            margin-right: 8px;
+          }
+        }
+      }
+      .select-button {
+        span {
+          display: flex;
+        }
+      }
+      .select-list {
+        background: linear-gradient(121.07deg, rgba(255, 255, 255, 0.3) -26.88%, rgba(255, 255, 255, 0.2) 73.85%);
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(40px);
+        &::after {
+          content: "";
+          position: absolute;
+          width: 30px;
+          height: 30px;
+          top: 0;
+          right: 0;
+          background: url(/common/menu-corner.png);
+          border-top-right-radius: 5px;
+        }
+      }
+    }
+  }
+  .table-activity {
+    margin-top: 30px;
+    background: linear-gradient(126.08deg, rgba(255, 255, 255, 0.3) 13.84%, rgba(255, 255, 255, 0.1) 74.14%);
+    border: 1px solid #D7D7D7;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(40px);
+    font-style: normal;
+    color: #FFFFFF;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    th {
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 38px;
+      color: #FFFFFF;
+      font-family: Saira;
+      text-transform: capitalize;
+      padding-top: 25px;
+      border-bottom-color: #D7D7D7;
+      border: none;
+    }
+    tr {
+      border-bottom: 1px solid #D7D7D7;
+      &:last-child {
+        border-bottom: 0px;
+      }
+    }
+    td {
+      border-bottom: none;
+      font-size: 18px;
+      line-height: 28px;
+      .align-center {
+        display: flex;
+        align-items: center;
+      }
+      .type {
+        img {
+          margin-right: 15px
+        }
+      }
+      .date {
+        cursor: pointer;
+        img {
+          margin-left: 15px;
+        }
+      }
+    }
+  }
 }
