--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
 @import "./components/collection-item";
 @import "./components/auction-item";
 @import "./components/getting-started-item";
+@import "./components/pagination";
 @import "./pages/error-page";
 @import "./pages/home";
 @import "./pages/details";
