--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,10 +9,14 @@
 @import "./components/listing";
 @import "./components/launchpad-item";
 @import "./components/collection-item";
+@import "./components/ranking-list";
+@import "./components/pagination";
 @import "./pages/home";
 @import "./pages/details";
 @import "./pages/activities";
 @import "./pages/discover";
+@import "./pages/nft-ranking";
+@import "./components/nft-search";
 @import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
 @font-face {
   font-family: SVN-Transformer;
