--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,7 @@
 @import "./components/getting-started-item";
 @import "./components/pagination";
 @import "./components/nft-search";
+@import "./components/sort";
 @import "./pages/error-page";
 @import "./pages/home";
 @import "./pages/details";
