feat: offering in my nft page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,6 +21,7 @@
 @import "./pages/activities";
 @import "./pages/discover";
 @import "./pages/nft-ranking";
+@import "./pages/my-nft";
 @import url("https://fonts.googleapis.com/css?family=Saira:100,200,300,400,500,600,700,800,900");
 
 @font-face {
