--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,9 +11,12 @@
 @import "./components/collection-item";
 @import "./components/auction-item";
 @import "./components/getting-started-item";
+@import "./components/app-table";
+@import "./components/app-select";
+@import "./components/app-pagination";
 @import "./pages/error-page";
 @import "./pages/home";
-@import "./pages/details";
+@import "./pages/nft-details";
 @import "./pages/activities";
 @import "./pages/discover";
 
