--- a/src/styles/pages/_activities.scss
+++ b/src/styles/pages/_activities.scss
@@ -1,4 +1,7 @@
 .activities-page {
+  width: 100%;
+  margin: 44px auto auto;
+  max-width: 1242px;
   background: transparent;
   margin-top: 45px;
   h1 {
@@ -64,16 +67,21 @@
     color: #FFFFFF;
     border-radius: 10px;
     -moz-border-radius: 10px;
-    th {
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 38px;
-      color: #FFFFFF;
-      font-family: Saira;
-      text-transform: capitalize;
-      padding-top: 25px;
-      border-bottom-color: #D7D7D7;
-      border: none;
+    thead {
+      tr {
+        border-bottom: 1px solid #D7D7D7!important;
+        th {
+          font-weight: bold;
+          font-size: 24px;
+          line-height: 38px;
+          color: #FFFFFF;
+          font-family: Saira;
+          text-transform: capitalize;
+          padding-top: 25px;
+          border-bottom-color: #D7D7D7;
+          border: none;
+        }
+      }
     }
     tr {
       border-bottom: 1px solid #D7D7D7;
