feat: collection detail page

--- a/src/styles/components/_listing.scss
+++ b/src/styles/components/_listing.scss
@@ -1,5 +1,6 @@
 .listing {
   height: 64px;
+  width: 100%;
   border-radius: 16px;
   background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
   padding: 2px;
