--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,6 +22,7 @@
 @import "./pages/error-page";
 @import "./pages/home";
 @import "./pages/nft-details";
+@import "./pages/collection-details";
 @import "./pages/activities";
 @import "./pages/discover";
 @import "./pages/nft-ranking";
