--- a/src/styles/pages/_discover.scss
+++ b/src/styles/pages/_discover.scss
@@ -14,7 +14,6 @@
       @include to(sm) {
         font-size: 50px;
       }
-
     }
   }
   .discover-sort {
@@ -27,7 +26,7 @@
     p {
       font-size: 20px;
       line-height: 31px;
-      color: #FFFFFF;
+      color: #ffffff;
     }
     .sorts {
       display: flex;
@@ -44,13 +43,13 @@
     }
   }
   .grid-custom {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
-        // grid-template-rows: repeat(4, 1fr);
-        grid-gap: 1rem;
-        grid-auto-flow: row;
-        width: 100%;
-        flex-direction: column;
-        margin-top: 35px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+    // grid-template-rows: repeat(4, 1fr);
+    grid-gap: 1rem;
+    grid-auto-flow: row;
+    width: 100%;
+    flex-direction: column;
+    margin-top: 35px;
   }
 }
