Implement tab Collected

--- a/src/styles/components/_auction-item.scss
+++ b/src/styles/components/_auction-item.scss
@@ -30,6 +30,7 @@
       display: flex;
       color: $cyan;
       align-items: center;
+      justify-content: space-between;
       svg {
         height: 16px;
         margin-left: 5px;
