feat: custom alert shorthand

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,7 @@
 @import "./components/pagination";
 @import "./components/nft-search";
 @import "./components/sort";
+@import "./components/app-alert";
 @import "./pages/error-page";
 @import "./pages/home";
 @import "./pages/nft-details";
