--- a/src/styles/components/_launchpad-item.scss
+++ b/src/styles/components/_launchpad-item.scss
@@ -2,7 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+  background: linear-gradient(
+    99.92deg,
+    rgba(#cd28e8, 0.5) 0%,
+    rgba(#0bebd6, 0.5) 100%
+  );
   @include blurBack(40px);
   height: fit-content;
   width: 100%;
@@ -44,7 +48,7 @@
     margin: 10px;
   }
   .launchpad-name {
-    font-size: 36px;
+    font-size: 24px;
     line-height: 36px;
     font-weight: 700;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
