--- a/src/styles/pages/_collection-details.scss
+++ b/src/styles/pages/_collection-details.scss
@@ -21,6 +21,9 @@
     img {
       width: 40px;
       height: 40px;
+      &:not(:last-child) {
+        margin-right: 10px;
+      }
     }
   }
   .collection-stats {
