--- a/src/styles/components/_collection-item.scss
+++ b/src/styles/components/_collection-item.scss
@@ -17,12 +17,23 @@
   }
   .collection-image {
     height: 100%;
-    margin-right: 25px;
+    aspect-ratio: 1/1;
+    background: linear-gradient(99.92deg, #cd28e8 0%, #0bebd6 100%);
+    padding: 2px;
     border-radius: 100%;
-    overflow: hidden;
-    img {
+    margin-right: 25px;
+    .image-content {
       height: 100%;
-      transition: 0.5s;
+      width: 100%;
+      border-radius: 100%;
+      overflow: hidden;
+      height: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: 0.5s;
+      }
     }
   }
   span {
